environments/dev/dp01/gateway01/booking-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-service
  namespace: dp01-dev
spec:
  rules:
    - host: booking-service-dp01-dev.mycluster-lon05-m3c-8x64-96a0e96e220543b8714ca52e486d2acc-0000.eu-gb.containers.appdomain.cloud
# use command: oc get ingresscontrollers/default -n openshift-ingress-operator -o jsonpath='{.status.domain}'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dp01-booking-service
                port:
                  number: 12001
